# tree-sitter-asciidoc

./: .clang-format  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  .prettierrc.yml  1.adoc  1.txt  Cargo.toml  Makefile  README.adoc  README.md  binding.gyp  example.adoc  flake.nix  grammar.js  package.json  pnpm-lock.yaml
benchmark/: asciidoc-recommended-practices.adoc  duration.rs  main.rs
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
common/: grammar.js
queries/: aerial.scm  highlights.scm  injections.scm  tag.scm
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: admition.txt  admonitions.txt  audio_video.txt  code_block.txt  comment.txt  description_list.txt  document_title.txt  footnote.txt  head.txt  image.txt  kbd.txt  list.txt  passthrough.txt  table.txt  title.txt  url.txt  xref.txt
